# whispaste

./: .gitignore  LICENSE  Makefile  README.md  flake.nix  nfpm.yaml  pyproject.toml  whispaste.py
.flatpak-builder/checksums/: x86_64-com.github.whispaste.yml
.github/workflows/: build.yml  test.yml
flatpak/: com.github.whispaste.desktop  com.github.whispaste.metainfo.xml  com.github.whispaste.yml
homebrew/: whispaste.rb
scripts/: make-appimage.sh  postinstall.sh  preremove.sh
snap/: snapcraft.yaml
tests/: test-packages.sh
whispaste/: __main__.py  audio.py  clipboard.py  config.py  injector.py  system.py
whispaste.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
