[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "whispaste"
version = "0.1.0"
description = "Simple voice-to-paste tool"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
whispaste = "whispaste:whispaste"

[tool.setuptools]
py-modules = ["whispaste"]
